# COMMAND_UI

./: .gitignore  README.md  package-lock.json  pyproject.toml  requirements-lock.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: deploy-pages.yml
API/: index.html
docs/: DEPLOYMENT.md  index.html  package-lock.json  package.json
docs/public/: robots.txt
docs/src/: App.tsx  api.ts  styles.css
docs/src/diagterm/: __main__ 2.py  app.py  collectors 2.py  web.py
mock_api/api/: capabilities.json  diagnostics.json  processes.json  services.json  summary.json
src/diagterm/: app.py  collectors.py  executor.py  web.py
web/: DEPLOYMENT.md  index.html  package-lock.json  package.json  vite.config.ts
web/.github/workflows/: deploy.yml
web/src/: App.tsx  api.ts
