[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diagterm"
version = "0.1.0"
description = "Terminal UI for live system diagnostics + command runner"
requires-python = ">=3.9"
dependencies = [
  "psutil>=5.9.0,<6.0.0",
  "textual>=0.70.0,<1.0.0",
  "fastapi>=0.110.0,<1.0.0",
  "uvicorn[standard]>=0.29.0,<1.0.0",
]

[project.scripts]
diagterm = "diagterm.__main__:main"
diagterm-web = "diagterm.web:main"

[tool.setuptools]
package-dir = {"" = "docs/src"}

[tool.setuptools.packages.find]
where = ["docs/src"]
